# DevRunDev-DRF

./: .env.example  README.md  main.py  pyproject.toml  setup_directories.py
.github/workflows/: pr_ci.yml
accounts/: adapters.py  admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: admin.py  admin_views.py  settings.py  urls.py  urls_admin.py  views.py  views_admin.py
config/settings/: __init__.py  base.py  development.py  production.py  test.py
courses/: admin.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py
courses/templatetags/: custom_filters.py
docs/: 001_PRD.md  002_ERD.md  003_ADR.md  004_Allauth_guide.md
enrollments/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py.py  views.py
enrollments/migrations/: 0001_initial.py  0002_payment.py
qna/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
qna/migrations/: 0001_initial.py
quizzes/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py
quizzes/templatetags/: custom_filters.py
reviews/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_review_options_alter_review_unique_together_and_more.py
static/css/: default.css
templates/: base.html  home.html
templates/accounts/: instructor_application_error.html  instructor_application_form.html  (+6 more)
(+53 files in other folders)
