[project]
name = "devrundev-drf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "django-environ>=0.12.0",
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.7.0",
    "drf-yasg>=1.21.10",
    "Pillow>=11.1.0",
    "django-filter>=25.1",
    "django-debug-toolbar>=5.1.0",
]
